--- a/LandingPageAPI/appsettings.json
+++ b/LandingPageAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LandingPageDBConnection": "Data Source=192.168.1.100;Initial Catalog=LandingPageDB;Persist Security Info=True;User ID=landingpage_user;Password=nn?666%QnT*S+xUP"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
