init admin api, 製作Login

--- a/LandingPageAdminAPI/appsettings.json
+++ b/LandingPageAdminAPI/appsettings.json
@@ -1,12 +1,19 @@
 {
-  "ConnectionStrings": {
-    "LandingPageDBConnection": "Data Source=192.168.1.100;Initial Catalog=LandingPageDB;Persist Security Info=True;User ID=landingpage_admin;Password=tdYP#?tSS9m3ZdD5"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"JwtSettings": {
+		"Issuer": "LandingPageAdminAPI",
+		"SignKey": "Ma7HkZt#+hHmQbC8"
+	},
+	"ConnectionStrings": {
+		"LandingPageDBConnection": "Data Source=192.168.1.100;Initial Catalog=LandingPageDB;Persist Security Info=True;User ID=landingpage_admin;Password=tdYP#?tSS9m3ZdD5"
+	},
+	"Key": {
+		"LandingPageAdminAPI": "Y4xX?nn33GGqxGW6"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
